# Duplicode

./: CMakeLists.txt  CompareAlgo.cpp  DESIGN.txt  Main.cpp  README.txt  dulicode.pro
src/: AbstractComparator.h  AbstractFilter.h  AbstractTestComparator.h  AbstractTestFilter.h  AbstractTetComparator.h  AbstractTetFilter.h  CodeFile.hpp  Common.cpp  Common.h  ComparatorDiffLib.hpp  ComparatorFactory.cpp  ComparatorFactory.h  ComparatorIdentical.hpp  ComparatorLevenshteinDistance.cpp  ComparatorLevenshteinDistance.h  ComparatorLongestMatch.cpp  ComparatorLongestMatch.h  ComparatorUncommonStrings.cpp  ComparatorUncommonStrings.h  CompareAlgo.cpp  CompareAlgo.h  ComparisionMatrix.h  ComparisionView.cpp  ComparisionView.h  ComparisonMatrix.cpp  ComparisonMatrix.h  FilterDelete.hpp  FilterDeleteComents.cpp  FilterDeleteComents.h  FilterDeleteComments.cpp  FilterDeleteComments.h  FilterDeleteHash.cpp  FilterDeleteHash.h  FilterDeleteWhitespace.hpp  FilterFactory.cpp  FilterFactory.h  FilterIdentity.hpp  FilterSplitStructure.hpp  FilterToLower.hpp  Main.cpp  (+11 more)
